testsuite/tests/typecheck/should_compile/tc174.hs
{-# LANGUAGE UnboxedTuples #-}

module ShouldCompile where

f x = (# x, x #) :: (# Int, Int #)
